--- a/index.html
+++ b/index.html
@@ -615,9 +615,9 @@
                               <div class="inner">
                                 <div class="heading">
                                   <div class="title">
-                                    <h4>UI/UX Virtual Internship</h4>
+                                    <h4>Project-Based Virtual Intern : UI/UX Niagahoster x Rakamin Academy</h4>
                                     <span
-                                      >Rakamin Academy ( October 2022 )</span
+                                      >Niagahoster( October 2022 )</span
                                     >
                                   </div>
                                   <div class="date-of-time">
