--- a/index.html
+++ b/index.html
@@ -503,12 +503,58 @@
                 >
                   <div class="personal-experience-inner mt--40">
                     <div class="row">
+                      
                       <!-- Start Skill List Area 2nd  -->
                       <div class="col-lg-11 col-md-10 col-10">
                         <div class="content ms-5">
                           <span class="subtitle">Recent Experience</span>
                           <h4 class="maintitle">Experience</h4>
                           <div class="experience-list">
+
+                            <!-- Start Single List  -->
+                            <div class="resume-single-list">
+                              <div class="inner">
+                                <div class="heading">
+                                  <div class="title">
+                                    <h4>Software QA Tester</h4>
+                                    <span
+                                      >Digital Sekuriti Indonesia ( December 2023 - Present
+                                      )</span
+                                    >
+                                  </div>
+                                  <div class="date-of-time">
+                                    <span>Contract</span>
+                                  </div>
+                                </div>
+                                <p class="description">
+                                 Mobile, Website, and API Testing AICare Project.
+                                </p>
+                              </div>
+                            </div>
+                            <!-- End Single List  -->
+                            
+                            <!-- Start Single List  -->
+                            <div class="resume-single-list">
+                              <div class="inner">
+                                <div class="heading">
+                                  <div class="title">
+                                    <h4>Project-Based Virtual Intern : Software Quality Assurance Evermos x Rakamin Academy</h4>
+                                    <span
+                                      >Evermos ( December 2023 - January 2024
+                                      )</span
+                                    >
+                                  </div>
+                                  <div class="date-of-time">
+                                    <span>Internship</span>
+                                  </div>
+                                </div>
+                                <p class="description">
+                                  Virtual Internship based course held by Rakamin Academy with Software Quality Assurance topics with Evermos industry partners.
+                                </p>
+                              </div>
+                            </div>
+                            <!-- End Single List  -->
+
                             <!-- Start Single List  -->
                             <div class="resume-single-list">
                               <div class="inner">
@@ -617,7 +663,7 @@
                                   <div class="title">
                                     <h4>Project-Based Virtual Intern : UI/UX Niagahoster x Rakamin Academy</h4>
                                     <span
-                                      >Niagahoster( October 2022 )</span
+                                      >Niagahoster( October 2022 - November 2022 )</span
                                     >
                                   </div>
                                   <div class="date-of-time">
